--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://drilon305.github.io/nftlanding-reactjs",
   "name": "nftlanding",
   "version": "0.1.0",
   "private": true,
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "webpack": "^5.69.1"
